[gd_scene load_steps=7 format=3 uid="uid://mdgfcmkcbo2i"]

[ext_resource type="Theme" uid="uid://cdfxg26th7ijc" path="res://UI/Base.theme" id="1_6u8ck"]
[ext_resource type="Script" uid="uid://cx71b7qgge4qt" path="res://UI/start_screen.gd" id="2_l0taq"]
[ext_resource type="FontFile" uid="uid://d3sfn2258u6j7" path="res://Rudras-Regular.otf" id="3_t72tu"]
[ext_resource type="StyleBox" uid="uid://dlorjagj5tml2" path="res://UI/Dimmer.stylebox" id="4_l0taq"]

[sub_resource type="LabelSettings" id="LabelSettings_gnao3"]
font = ExtResource("3_t72tu")
font_size = 92
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bo5hi"]
font = ExtResource("3_t72tu")
font_size = 48

[node name="StartScreen" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6u8ck")
script = ExtResource("2_l0taq")

[node name="MainMenu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("4_l0taq")

[node name="PanelContainer" type="PanelContainer" parent="MainMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_gnao3")
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="MarginContainer2" type="MarginContainer" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="QuitButton" type="Button" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Quit
"

[node name="QuitConfirmModal" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 5.0
offset_top = 5.0
offset_right = 1915.0
offset_bottom = 1075.0
theme_override_styles/panel = ExtResource("4_l0taq")

[node name="PanelContainer" type="PanelContainer" parent="QuitConfirmModal"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="QuitConfirmModal/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="QuitConfirmModal/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="QuitConfirmModal/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="QuitConfirmModal/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Are you sure you want to quit?"
label_settings = SubResource("LabelSettings_bo5hi")

[node name="HBoxContainer" type="HBoxContainer" parent="QuitConfirmModal/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="CancelQuitButton" type="Button" parent="QuitConfirmModal/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="ConfirmQuitButton" type="Button" parent="QuitConfirmModal/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Quit to Desktop"

[connection signal="pressed" from="MainMenu/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_pressed_resume"]
[connection signal="pressed" from="MainMenu/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/QuitButton" to="." method="_on_pressed_quit"]
[connection signal="pressed" from="QuitConfirmModal/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelQuitButton" to="." method="_on_pressed_cancel_quit"]
[connection signal="pressed" from="QuitConfirmModal/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ConfirmQuitButton" to="." method="_on_pressed_quit_confirm"]
